<resources>
    <string name="app_name">PlanFit</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="register">Registrar</string>
    <string name="action_logout">Cerrar Sesion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="first_nav_name">Deportes</string>
    <string name="two_nav_name">Nutricion</string>
    <string name="three_nav_name">Plan</string>
    <string name="err_email">Email invalido</string>
    <string name="err_password">Contraseña con mas de 6 caracteres</string>
    <string name="err_login_fail">Usuario no encontrado, por favor Registrese</string>
    <string name="err_register_fail">Hubo un error, intentalo de nuevo por favor</string>
    <string name="name_app_display">Plan Fit</string>
    <string name="info_dialog_err">Aceptar</string>
    <string name="continuar">Continuar</string>
    <string name="salir">Salir</string>
    <string name="title_login">Iniciando Sesion...</string>
    <string name="message_login">Porfavor espere...</string>
    <string name="title_register">Registrando usuario...</string>
    <string name="message_register">Porfavor espere...</string>
    <string name="escoja_una_foto_opcional">Escoja una foto (Opcional)</string>
    <string name="campos_obligatorios">Campos Obligatorios</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="actualize_los_campos">Actualize los campos</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="nick">Nick</string>
    <string name="aceptar">Aceptar</string>
    <string name="actualizar_email">Actualizar Email</string>
    <string name="actualizar_foto">Actualizar Foto</string>
    <string name="borrar_foto">Borrar Foto</string>
    <string name="actualizar_contrase_a">Actualizar Contraseña</string>
    <string name="actualizar_nombre">Actualizar Nombre</string>
    <string name="actualizar_nick">Actualizar Nick</string>
    <string name="borrar_cuenta">Borrar Cuenta</string>
    <string name="info_update_email">Email actualizado correctamente</string>
    <string name="info_update_password">Contraseña actualizada correctamente</string>
    <string name="info_update_fullname">Nombre actualizado correctamente</string>
    <string name="info_update_nickname">Nick actualizado correctamente</string>
    <string name="info_update_name">Nombre actualizado correctamente</string>
    <string name="action_delete">Borrar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="info_delete_acount_1">¿Deseas borrar a</string>
    <string name="info_delete_acount_2">\?</string>
    <string name="sobre_nosotros">Contacto</string>
    <string name="cerrar">Cerrar</string>
    <string name="desarollado_dise_ado">Desarollado/Diseñado</string>
    <string name="message_email_developer">Plan Fit, desarollador :</string>
    <string name="qu_buscas">¿Qué Buscas?</string>
    <string name="adelgazar">Adelgazar</string>
    <string name="tonificar">Tonificar</string>
    <string name="ganar_volumen">Ganar Volumen</string>
    <string name="estas_preparado">¿Estás Preparado?</string>
    <string name="crear_plan">Crear tu plan</string>
    <string name="crear_plan_title">Crear plan</string>
    <string name="ver_tu_plan">Ver tu plan</string>
    <string name="ver_tu_plan_title">Ver plan</string>
    <string name="mensajes">Mensajes</string>
    <string name="mensajes_deportes">Mensajes Deportes</string>
    <string name="mensajes_nutricion">Mensajes Nutricion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="abrir_video">Abrir Video</string>
    <string name="agregar_a_favoritos">Agregar a favoritos</string>
    <string name="abrir_receta">Abrir receta</string>
    <string name="itemfavoritos">Favoritos</string>
    <string name="eliminar_de_favoritos">Eliminar de favoritos</string>
    <string name="deportefav">Deportes Favoritos</string>
    <string name="favorites_emptyFavorites_text">Sin Favoritos?</string>
    <string name="favorites_saveFavorites_sport_text">Guarda algun deporte para luego verlo aqui.</string>
    <string name="favorites_saveFavorites_nutrition_text">Guarda alguna alimentación para luego verla aqui.</string>
    <string name="create_plan_sport_text">Para crear un plan debes agregar algun deporte a favoritos.</string>
    <string name="create_plan_nutrition_text">Para crear un plan debes agregar alguna alimentación a favoritos.</string>
    <string name="agregarafavoritos">agregado a favoritos</string>
    <string name="eliminarafavoritos">eliminado de favoritos.</string>
    <string name="title_delete_boto">Borrando foto</string>
    <string name="message_delete_photo">Porfavor, espere mientras se borra la foto.</string>
    <string name="title_update_foto">Actualizando foto</string>
    <string name="message_update_photo">Porfavor, espere mientras se actualiza la foto</string>
    <string name="title_update_pass">Actualizando contraseña</string>
    <string name="message_update_pass">Porfavor, espere mientras se actualiza tu contraseña</string>
    <string name="info_login_ok">Sesion iniciada con exito</string>
    <string name="title_update_email">Actualizando email</string>
    <string name="message_update_email">Porfavor, espere mientras se actualiza tu email.</string>
    <string name="title_update_name">Actulizando nombre</string>
    <string name="message_update_name">Porfavor, espere mientras se actualiza tu nombre.</string>
    <string name="title_update_nick">Actualizando nick</string>
    <string name="message_update_nick">Porfavor, espere mientras se actualiza tu nick.</string>
    <string name="message_delete_acount">Porfavor, espere mientras se borra tu cuenta.</string>
    <string name="menuopengalery">Selecciona imagen...</string>
    <string name="info_update_photo">Foto actualizada correctamente</string>
    <string name="error_update_photo">Error al actualizar la foto del perfil, vuelve a intentarlo.</string>
    <string name="delete_photo_info">Foto borrada correctamente</string>
    <string name="error_delete_photo">Error al eliminar la foto del perfil, vuelve a intentarlo.</string>
    <string name="error_email">Error al actualizar el email del perfil, vuelve a intentarlo.</string>
    <string name="error_password">Error al actualizar la contraseña, vuelve a intentarlo.</string>
    <string name="error_nick">Error al actualizar el nick, vuelve a intentarlo.</string>
    <string name="error_name">Error al actualizar el nombfe, vuelve a intentarlo.</string>
    <string name="error_gallery_1">Something went wrong</string>
    <string name="error_gallery_2">You haven\'t picked Image</string>
    <string name="error_delete_user">Error al borrar la cuenta, intentelo de nuevo.</string>
    <string name="title_delete_user">Borrando cuenta</string>
    <string name="message_delete_user">Eliminando cuenta, por favor espere.</string>
    <string name="info_delete_user">Gracias por usar PlanFit.</string>
    <string name="close_info">Cerrar</string>
    <string name="err_register">Error al registrarse.</string>
    <string name="duraci_n_del_plan">Duración del plan</string>
    <string name="close_create">Guardar y salir</string>
    <string name="cuando_deseas_hacerlo">¿Cuando deseas hacerlo?</string>
    <string name="info_guardar">Guardar</string>
    <string name="comienzo">Comienzo:</string>
    <string name="fin">Fin:</string>
    <string name="eliminar">Eliminar</string>
    <string name="info_show_plan">Tu Plan</string>
    <string name="_1_d_a">1 Día</string>
    <string name="info_create_plan">No puedes elegir la misma hora de comienzo y de fin.</string>
    <string name="add_create_sport">agregado al plan de deporte correctamente</string>
    <string name="delete_create_sport">eliminado del plan de deportes correctamente</string>
    <string name="add_create_nutrition">agregado al plan de alimentos correctamente</string>
    <string name="delete_create_nutrition">eliminado del plan de alimentos correctamente</string>
    <string name="info_register">Bienvenido</string>
    <string name="cuando">¿Cuando?</string>
    <string name="sin_plan_de_ejercicios">Sin plan de ejercicios?</string>
    <string name="sin_plan_de_alimentos">Sin plan de nutrición?</string>
    <string name="crea_un_plan_de_ejercicios_para_verlo_aqui">Crea un plan de ejercicios para verlo aqui.</string>
    <string name="crea_un_plan_de_alimentos_para_verlo_aqui">Crea un plan de nutrición para verlo aqui.</string>
    <string name="update_sport_plan">ACTUALIZAR</string>
    <string name="elige">Elige</string>
    <string name="sin_favopritos_para_crear_el_plan">Sin Favoritos para crear el plan?</string>
    <string name="info_network_device">Comprueba su conexion de internet y reinice la aplicación</string>
    <string-array name="timePlan">

        <item>01:00</item>
        <item>01:15</item>
        <item>01:30</item>
        <item>01:45</item>

        <item>02:00</item>
        <item>02:15</item>
        <item>02:30</item>
        <item>02:45</item>

        <item>03:00</item>
        <item>03:15</item>
        <item>03:30</item>
        <item>03:45</item>

        <item>04:00</item>
        <item>04:15</item>
        <item>04:30</item>
        <item>04:45</item>

        <item>05:00</item>
        <item>05:15</item>
        <item>05:30</item>
        <item>05:45</item>

        <item>06:00</item>
        <item>06:15</item>
        <item>06:30</item>
        <item>06:45</item>

        <item>07:00</item>
        <item>07:15</item>
        <item>07:30</item>
        <item>07:45</item>

        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>

        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>

        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>

        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>

        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>

        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>

        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>

        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>

        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>

        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>

        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>

        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>

        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>

        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>

        <item>22:00</item>
        <item>22:15</item>
        <item>22:30</item>
        <item>22:45</item>

        <item>23:00</item>
        <item>23:15</item>
        <item>23:30</item>
        <item>23:45</item>

        <item>00:00</item>
        <item>00:15</item>
        <item>00:30</item>
        <item>00:45</item>

    </string-array>
    <string name="escoja_una_foto">Escoja una foto</string>
    <string name="usuarios">Chat Grupal</string>
</resources>