<?xml version="1.0" encoding="UTF-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="wrap_content"
            android:background="@drawable/bg_welcome"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:background="@drawable/corner_layout"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/escoja_una_foto"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                    android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/actualize_los_campos"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView3"
                    android:textColor="@color/white"
                    android:layout_marginTop="23dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewEditUser"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    style="@style/TextLabel"
                    android:id="@+id/textInputLayout"
                    android:layout_marginTop="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_password_update" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:hint="@string/nombre_completo"
                        android:textColor="@color/white"
                        android:maxLength="10"
                        android:ems="10"
                        android:id="@+id/fullNameEditUser"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    style="@style/TextLabel"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:id="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/button_update_fullname">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:textColor="@color/white"
                        android:hint="@string/nick"
                        android:ems="10"
                        android:id="@+id/nickNameEditUser"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    style="@style/TextLabel"
                    android:id="@+id/textInputLayout3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:textColor="@color/white"
                        android:hint="@string/email"
                        android:ems="10"
                        android:id="@+id/nickEmailEditUser"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"
                    app:passwordToggleEnabled="true"
                    style="@style/TextLabel"
                    android:id="@+id/textInputLayout4"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/update_emial_button">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:hint="@string/password"
                        android:ems="10"
                        android:id="@+id/passwordEditUser"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                    android:src="@drawable/icon_gallery"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:id="@+id/imageViewEditUser"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:enabled="false"
                    android:text="@string/actualizar_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/update_emial_button"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:background="@drawable/button_selector"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"/>
            <Button
                    android:enabled="false"
                    android:text="@string/actualizar_contrase_a"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/button_password_update"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:background="@drawable/button_selector"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
            <Button
                    android:enabled="false"
                    android:text="@string/actualizar_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/button_nick_update"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:background="@drawable/button_selector"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
            <Button
                    android:enabled="false"
                    android:text="@string/actualizar_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/button_update_fullname"
                    android:textColor="@color/white"
                    android:layout_marginTop="32dp"
                    android:textSize="10dp"
                    android:background="@drawable/button_selector"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
            <Button
                    android:text="@string/actualizar_foto"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:background="@drawable/button_selector"
                    android:id="@+id/button_update_photo" app:layout_constraintStart_toEndOf="@+id/imageViewEditUser"
                    android:layout_marginStart="32dp" android:layout_marginTop="80dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"/>
            <Button
                    android:text="@string/borrar_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/button_delete_account"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:background="@drawable/button_selector"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_nick_update"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            />
            <Button
                    android:text="@string/close_info"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/button_close_info"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_selector"
                    app:layout_constraintTop_toBottomOf="@+id/button_delete_account" android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>
            <Button
                    android:text="@string/borrar_foto"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_selector"
                    android:id="@+id/button_delete_photo" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_update_photo"
                    app:layout_constraintStart_toEndOf="@+id/imageViewEditUser" android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                    app:layout_constraintHorizontal_bias="0.0"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>