<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.FragmentsMainMenuActivity.ShowPlan.FragmentShowPlan">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/backgroung_grad"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/info_show_plan"
                android:layout_width="match_parent"
                android:textSize="50dp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:maxLines="2"
                android:layout_height="wrap_content"
                android:id="@+id/textViewInfo"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="68dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/first_button"
                app:layout_constraintVertical_chainStyle="spread_inside"/>
        <Button
                android:textSize="25dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_nav_name"
                android:id="@+id/first_button" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfo" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp" app:layout_constraintHorizontal_bias="0.504"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/second_button"/>
        <Button
                android:textSize="25dp"
                android:text="@string/two_nav_name"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/second_button" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/first_button" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/three_button"/>
        <Button
                android:text="@string/close_info"
                android:textSize="25dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/three_button" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/second_button" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp" android:layout_marginBottom="68dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>