<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.FragmentsMainMenuActivity.CreatePlan.FragmentCreatePlan"
             android:id="@+id/frameLayout">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/backgroung_grad"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/elige"
                android:layout_width="match_parent"
                android:textSize="35dp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:maxLines="2"
                android:layout_height="wrap_content"
                android:id="@+id/textViewInfo"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="68dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/button_select_sport"
                app:layout_constraintVertical_chainStyle="spread_inside"/>
        <Button
                android:textSize="12dp"
                android:text="@string/first_nav_name"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_select_sport" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfo" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp" app:layout_constraintHorizontal_bias="0.504"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/button_Select_nutrition"/>
        <Button
                android:textSize="12dp"
                android:text="@string/two_nav_name"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_Select_nutrition" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_select_sport" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/button_exit"/>
        <Button
                android:textSize="12dp"
                android:text="@string/close_info"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_exit" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_Select_nutrition" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp" android:layout_marginBottom="68dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>